fixed responsiveness of homepage on small devices

--- a/style/components/grid.css
+++ b/style/components/grid.css
@@ -62,4 +62,11 @@
   }
 }
 
+@media (max-width: 320px) {
+  .left {
+    height: 80vh;
+  }
+}
+
+
 
