--- a/style/components/text.css
+++ b/style/components/text.css
@@ -52,8 +52,12 @@
 }
 
 
-
-
+@media (max-width: 576px) {
+  .list-item {
+    padding: 10px;
+    margin: 5px;
+  }
+}
 
 
 
